--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "2018-01-01 00:04:00  14582.660932    13632.923329  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "2018-01-01 00:04:00  135141.26944    13574.719401  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "[129067 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,14 +610,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c9/8k5_h1f54kx9j_0kkkp7fff80000gn/T/ipykernel_9787/370789460.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/c9/8k5_h1f54kx9j_0kkkp7fff80000gn/T/ipykernel_40675/370789460.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  bitstamp.loc[:, 'Close'] = bitstamp.loc[:, \"Close\"].str.replace(\"$\",\"\")\n"
      ]
     },
@@ -809,7 +809,7 @@
        "[129540 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "[129540 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
        "[129322 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,14 +1307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c9/8k5_h1f54kx9j_0kkkp7fff80000gn/T/ipykernel_9787/3458773855.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/c9/8k5_h1f54kx9j_0kkkp7fff80000gn/T/ipykernel_40675/3458773855.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  coinbase.loc[:, 'Close'] = coinbase.loc[:, \"Close\"].str.replace(\"$\",\"\")\n"
      ]
     },
@@ -1506,7 +1506,7 @@
        "[129540 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
        "[129540 rows x 7 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,28 +1814,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bitstamp_sliced' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbitstamp_sliced\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bitstamp_sliced' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bitstamp_sliced\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1838,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -1891,7 +1879,7 @@
        "Name: Close, Length: 129540, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1935,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1966,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1992,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +1989,7 @@
        "<AxesSubplot:title={'center':'Bitstamp Prices'}, xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2028,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2025,7 @@
        "<AxesSubplot:title={'center':'coinbase prices'}, xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2141,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2138,7 @@
        "<AxesSubplot:title={'center':'Bitstamp v. Coinbase'}, xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2200,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2197,7 @@
        "<AxesSubplot:title={'center':'Bitstamp v. Coinbase Jan 1, 2018'}, xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2236,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -2255,7 +2243,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2272,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2281,7 +2269,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2314,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2311,7 @@
        "<AxesSubplot:title={'center':'Bitstamp v. Coinbase Feb 24, 2018'}, xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2352,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2369,7 +2357,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2394,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2403,7 +2391,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2428,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2437,7 +2425,7 @@
        "<AxesSubplot:title={'center':'Bitstamp v. Coinbase mar26, 2018'}, xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2464,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2469,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2499,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2496,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2570,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2591,7 +2579,7 @@
        "Name: Close, Length: 1440, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2606,26 +2594,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "count    960.000000\n",
-       "mean      53.405344\n",
-       "std       53.910409\n",
-       "min        0.010000\n",
-       "25%       21.602500\n",
-       "50%       39.885000\n",
-       "75%       68.547500\n",
-       "max      606.800000\n",
-       "Name: Close, dtype: float64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4194514681.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [56]\u001b[0;36m\u001b[0m\n\u001b[0;31m    arbitrage_spread_early = # YOUR CODE HERE\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -2650,22 +2628,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Timestamp\n",
-       "2018-01-16 00:00:00         NaN\n",
-       "2018-01-16 00:01:00         NaN\n",
-       "2018-01-16 00:02:00    0.000731\n",
-       "2018-01-16 00:03:00    0.001108\n",
-       "2018-01-16 00:04:00    0.000909\n",
-       "Name: Close, dtype: float64"
+       "2018-01-01 00:00:00    False\n",
+       "2018-01-01 00:01:00    False\n",
+       "2018-01-01 00:02:00    False\n",
+       "2018-01-01 00:03:00    False\n",
+       "2018-01-01 00:04:00    False\n",
+       "                       ...  \n",
+       "2018-01-01 23:55:00     True\n",
+       "2018-01-01 23:56:00     True\n",
+       "2018-01-01 23:57:00     True\n",
+       "2018-01-01 23:58:00     True\n",
+       "2018-01-01 23:59:00     True\n",
+       "Name: Close, Length: 1440, dtype: bool"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spread_return_early= arbitrage_spread_early > 0\n",
+    "spread_return_early"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:00:00    False\n",
+       "2018-01-01 00:01:00    False\n",
+       "2018-01-01 00:02:00    False\n",
+       "2018-01-01 00:03:00    False\n",
+       "2018-01-01 00:04:00    False\n",
+       "                       ...  \n",
+       "2018-01-01 23:55:00     True\n",
+       "2018-01-01 23:56:00     True\n",
+       "2018-01-01 23:57:00     True\n",
+       "2018-01-01 23:58:00     True\n",
+       "2018-01-01 23:59:00     True\n",
+       "Name: Close, Length: 1440, dtype: bool"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boolean_filter = arbitrage_spread_early > 0\n",
+    "boolean_filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:21:00    True\n",
+       "2018-01-01 00:24:00    True\n",
+       "2018-01-01 00:26:00    True\n",
+       "2018-01-01 00:30:00    True\n",
+       "2018-01-01 00:31:00    True\n",
+       "                       ... \n",
+       "2018-01-01 23:55:00    True\n",
+       "2018-01-01 23:56:00    True\n",
+       "2018-01-01 23:57:00    True\n",
+       "2018-01-01 23:58:00    True\n",
+       "2018-01-01 23:59:00    True\n",
+       "Name: Close, Length: 782, dtype: bool"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spread_return_early.loc[spread_return_early]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:21:00    True\n",
+       "2018-01-01 00:24:00    True\n",
+       "2018-01-01 00:26:00    True\n",
+       "2018-01-01 00:30:00    True\n",
+       "2018-01-01 00:31:00    True\n",
+       "                       ... \n",
+       "2018-01-01 23:55:00    True\n",
+       "2018-01-01 23:56:00    True\n",
+       "2018-01-01 23:57:00    True\n",
+       "2018-01-01 23:58:00    True\n",
+       "2018-01-01 23:59:00    True\n",
+       "Name: Close, Length: 782, dtype: bool"
+      ]
+     },
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2673,10 +2755,11 @@
    "source": [
     "# For the date early in the dataset, calculate the spread returns by dividing the instances when the arbitrage spread is positive (> 0) \n",
     "# by the price of Bitcoin from the exchange you are buying on (the lower-priced exchange).\n",
-    "spread_return_early= # YOUR CODE HERE\n",
+    "spread_return_early= spread_return_early > 0\n",
     "\n",
     "# Review the spread return DataFrame\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "spread_return_early.loc[spread_return_early]"
    ]
   },
   {
