--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "2018-01-01 00:04:00  14582.660932    13632.923329  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +366,7 @@
        "2018-01-01 00:04:00  135141.26944    13574.719401  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,6 +375,34 @@
     "# Use the head (and/or tail) function to confirm that the data was imported properly.\n",
     "# YOUR CODE HERE\n",
     "coinbase.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:00:00    13620.00\n",
+       "2018-01-01 00:01:00    13607.14\n",
+       "2018-01-01 00:02:00    13601.44\n",
+       "2018-01-01 00:03:00    13587.31\n",
+       "2018-01-01 00:04:00    13550.34\n",
+       "Name: Open, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coin_open = coinbase.loc[:, \"Open\"]\n",
+    "\n",
+    "coin_open.head()"
    ]
   },
   {
