--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -406,6 +406,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:00:00    $13608.49\n",
+       "2018-01-01 00:01:00    $13601.66\n",
+       "2018-01-01 00:02:00     $13580.0\n",
+       "2018-01-01 00:03:00    $13550.34\n",
+       "2018-01-01 00:04:00    $13583.44\n",
+       "Name: Close, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coin_close = coinbase.loc[:, \"Close\"]\n",
+    "coin_close.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
