--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "<AxesSubplot:xlabel='Timestamp'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -712,7 +712,16 @@
    ],
    "source": [
     "ax = coin_open.plot()\n",
-    "coin_close.plot(ax = ax)"
+    "coin_close.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coin_close.plot(lengend=True )"
    ]
   },
   {
