--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -412,6 +412,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coin_close"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
