--- a/crypto_arbitrage.ipynb
+++ b/crypto_arbitrage.ipynb
@@ -90,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -214,6 +216,39 @@
     "# Use the head (and/or tail) function to confirm that the data was imported properly.\n",
     "# YOUR CODE HERE\n",
     "bitstamp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:00:00     3.334553\n",
+       "2018-01-01 00:01:00     2.663188\n",
+       "2018-01-01 00:02:00     0.084653\n",
+       "2018-01-01 00:03:00     7.182986\n",
+       "2018-01-01 00:04:00     1.069665\n",
+       "                         ...    \n",
+       "2018-03-31 23:55:00     1.044354\n",
+       "2018-03-31 23:56:00     3.069539\n",
+       "2018-03-31 23:57:00    28.239049\n",
+       "2018-03-31 23:58:00     0.839507\n",
+       "2018-03-31 23:59:00     0.209363\n",
+       "Name: BTC Volume, Length: 129540, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "btc_volume = bitstamp['BTC Volume']\n",
+    "btc_volume \n"
    ]
   },
   {
@@ -379,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,23 +435,47 @@
        "Name: Open, Length: 129540, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coin_open = coinbase[\"Open\"]\n",
-    "coin_open"
+    "coin_open_df = coinbase[\"Open\"]\n",
+    "coin_open_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp\n",
+       "2018-01-01 00:00:00    $13608.49\n",
+       "2018-01-01 00:01:00    $13601.66\n",
+       "2018-01-01 00:02:00     $13580.0\n",
+       "2018-01-01 00:03:00    $13550.34\n",
+       "2018-01-01 00:04:00    $13583.44\n",
+       "                         ...    \n",
+       "2018-03-31 23:55:00      $6930.0\n",
+       "2018-03-31 23:56:00     $6930.01\n",
+       "2018-03-31 23:57:00     $6933.91\n",
+       "2018-03-31 23:58:00     $6937.31\n",
+       "2018-03-31 23:59:00      $6934.0\n",
+       "Name: Close, Length: 129540, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "coin_close"
+    "coin_close_df = coinbase[\"Close\"]\n",
+    "coin_close_df"
    ]
   },
   {
